--- a/style.css
+++ b/style.css
@@ -123,3 +123,24 @@ p {
 .yogurt-mar {
   margin-top: 30px;
 }
+@media (max-width: 576px) {
+  h1,
+  h2 {
+    text-align: center;
+  }
+  h2 {
+    font-size: 32px;
+  }
+  h1 {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+  .link-launch {
+    display: block;
+    text-align: center;
+    margin: 0 20px;
+  }
+  p {
+    text-align: center;
+  }
+}
